--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>How to create a Git hub Repository</h1>
     There are are few steps see below
-    
+    <ul>
+        <li>First step is git init</li>
+        <li>second git remote add origin "type link"</li>
+        <li>third git add .</li>
+    </ul>
 </body>
 </html>
